manifest/objects/Plan_Specific_Fees__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Copay_May_Be_Less__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Copay May Be Less</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <formula>Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Plan-Specific Fees By Product (Asset)</relationshipLabel>
        <relationshipName>Plan_Specific_Fees_By_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Acct_ID__c</fullName>
        <formula>Member_Group__r.Client_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Acct ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_GUID__c</fullName>
        <formula>Bill_to_Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To Plan-Specific Fees By Product</relationshipLabel>
        <relationshipName>Plan_Specific_Fees_By_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Retail_Fee__c</fullName>
        <formula>Product_Under_Contract__r.Client_Retail_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Retail Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Initial_Diagnostic_Mbr_Pd__c</fullName>
        <label>Consult Fee- Psych/MD-1stvisitonly-MbrPd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Initial_Diagnostic_Plan_Pd__c</fullName>
        <label>Consult Fee-Psych/MD-1stvisitonly-PlanPd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Mbr_Pd__c</fullName>
        <label>Consult Fee - Mbr Pd</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Ongoing_MD_Mbr_Pd__c</fullName>
        <label>Consult Fee- Psych/MD-ONGOINGvisit-MbrPd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Ongoing_MD_Plan_Pd__c</fullName>
        <label>Consult Fee-Psych/MD-ONGOINGvisit-PlanPd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Ongoing_Non_MD_Mbr_Pd__c</fullName>
        <label>Consult Fee- Non-Psychiatrist- Mbr Pd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Ongoing_Non_MD_Plan_Pd__c</fullName>
        <label>Consult Fee- Non-Psychiatrist- Plan Pd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Plan_Pd__c</fullName>
        <label>Consult Fee - Plan Pd</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Frequency__c</fullName>
        <label>Consult Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Year</fullName>
                </value>
                <value>
                    <fullName>Per Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consults_per_Family__c</fullName>
        <label>Consults per Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Membership_Fee__c</fullName>
        <formula>Subscription__r.Current_Membership_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DERMConsult_Fee_Mbr_Pd__c</fullName>
        <label>DERMConsult Fee - Mbr Pd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DERMConsult_Fee_Plan_Pd__c</fullName>
        <label>DERMConsult Fee - Plan Pd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DERM_100_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DERM 100% Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Teletherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Teletherapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLP_1_Model__c</fullName>
        <label>GLP-1 Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Engagement Criteria</fullName>
                </value>
                <value>
                    <fullName>Sole Prescriber</fullName>
                </value>
                <value>
                    <fullName>Sole Prescriber and Engagement Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GM_100_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM 100% Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( Product__c = &apos;General Medical&apos;, Member_Group__r.Group_Number__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status_of_Pdt_Under_Contr__c</fullName>
        <formula>text(Product_Under_Contract__r.Implementation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Status of Pdt Under Contr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Fee_matched__c</fullName>
        <formula>IF(
 Asset__c = null,
 null,
 IF(
  Consult_Fee_Mbr_Pd__c + Consult_Fee_Plan_Pd__c =  Asset__r.Consult_Fees__c,
  &quot;true&quot;,
  &quot;false&quot;
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fee matched</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_100_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MH 100% Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Group_Name__c</fullName>
        <formula>Member_Group__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Group__c</fullName>
        <label>Member Group</label>
        <referenceTo>Mbr_Group__c</referenceTo>
        <relationshipLabel>Plan-Specific Fees By Product</relationshipLabel>
        <relationshipName>Plan_Specific_Fees_By_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membership_fee__c</fullName>
        <formula>Subscription__r.Membership_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to Aetna clients only</inlineHelpText>
        <label>PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSF_ProductCode__c</fullName>
        <formula>IF( Asset__c != NULL, Asset__r.Product2.ProductCode,  Subscription__r.SBQQ__Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSF ProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Account_GUID__c</fullName>
        <formula>Payer_Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payer Plan-Specific Fees By Product (Payer Account)</relationshipLabel>
        <relationshipName>Plan_Specific_Fees_By_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Specific_Fee_Id_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Specific Fee Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_End_Date__c</fullName>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Start_Date__c</fullName>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Under_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Under Contract</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Plan-Specific Fees By Product</relationshipLabel>
        <relationshipName>PSF_Product_Under_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Subscription__r.SBQQ__ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CARDIO 1 Free Nutrition Visit Per Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Effective_fm_Pdt_Under_Contr__c</fullName>
        <formula>Product_Under_Contract__r.InstallDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Effective fm Pdt Under Contr</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_GUID__c</fullName>
        <formula>Sold_to_Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold to Plan-Specific Fees By Product (Sold to Account)</relationshipLabel>
        <relationshipName>Plan_Specific_Fees_By_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscribed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscribed Asset(PRODUCT)</label>
        <referenceTo>SBQQ__SubscribedAsset__c</referenceTo>
        <relationshipLabel>Plan-Specific Fees By Product</relationshipLabel>
        <relationshipName>Plan_Specific_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Plan-Specific Fees By Product</relationshipLabel>
        <relationshipName>Plan_Specific_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_Client_Case_Rate_Fee__c</fullName>
        <description>Tobacco Cessation Client Case Rate Fee</description>
        <inlineHelpText>Tobacco Cessation Client Case Rate Fee</inlineHelpText>
        <label>Client Case Rate Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TC_Mbr_Case_Rate_Fee__c</fullName>
        <label>Mbr Case Rate Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Teladoc_Net_Fee__c</fullName>
        <formula>Product_Under_Contract__r.Teladoc_Net_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teladoc Net Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Types_of_Lives__c</fullName>
        <formula>TEXT ( Product_Under_Contract__r.Type_of_Lives__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Types of Lives</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USGH_APP_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the member group has opted out of the Advanced Practice Providers program.  Only applies to USGH member groups.</description>
        <label>USGH APP Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan-Specific Fees By Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PSF_0345369</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Name__c</columns>
        <columns>Consult_Fee_Mbr_Pd__c</columns>
        <columns>Consult_Fee_Plan_Pd__c</columns>
        <columns>Current_Membership_Fee__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Member_Group__c</columns>
        <columns>Member_Group_Name__c</columns>
        <columns>Membership_fee__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>PSF-0345369</value>
        </filters>
        <label>PSF-0345369</label>
    </listViews>
    <nameField>
        <displayFormat>PSF-{0000000}</displayFormat>
        <label>Plan Fees ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan-Specific Fees By Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>